objects/TW1_Propriedade__c.object
<CustomObject>
    <fields>
        <fullName>Planta__c</fullName>
        <label>Planta</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TW1_AMM_M2__c</fullName>
        <formula>IF(OR(TW1_AMM__c = 0,TW1_area_m2__c=0),0,TW1_AMM__c/TW1_area_m2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMM/M²</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_AMM_OTN__c</fullName>
        <formula>IF(OR(TW1_AMM__c=0,TW1_OTN__c=0),0,TW1_AMM__c/TW1_OTN__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMM/OTN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_AMM__c</fullName>
        <label>AMM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Altura__c</fullName>
        <label>Altura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Ativa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ativa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Condominio__c</fullName>
        <label>Condominio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Fundo__c</fullName>
        <label>Fundo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_IPTU__c</fullName>
        <label>IPTU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Id_Externo__c</fullName>
        <externalId>true</externalId>
        <label>Id Externo</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Largura__c</fullName>
        <label>Largura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Localizacao__c</fullName>
        <label>Localização</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nota_de_d_bito_ou_CTO__c</fullName>
        <label>Nota de débito ou CTO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_OTN__c</fullName>
        <label>OTN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Observacao__c</fullName>
        <label>Observação</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Piso__c</fullName>
        <label>Piso</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1º andar</fullName>
                </value>
                <value>
                    <fullName>Subsolo</fullName>
                </value>
                <value>
                    <fullName>2º andar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_RES_m2__c</fullName>
        <formula>IF(OR(TW1_Res_Perata__c=0,TW1_area_m2__c=0),0,TW1_Res_Perata__c/TW1_area_m2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RES/m²</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Res_Perata__c</fullName>
        <label>Res Perata</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_SGL_Shopping__c</fullName>
        <formula>TW1_Shopping__r.TW1_SGL_Empreendimento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGL Shopping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Propriedades</relationshipLabel>
        <relationshipName>Propriedades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contrato assinado</fullName>
                </value>
                <value>
                    <fullName>Repasse</fullName>
                </value>
                <value>
                    <fullName>Vaga</fullName>
                </value>
                <value>
                    <fullName>Ocupada</fullName>
                </value>
                <value>
                    <fullName>Reservada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Status_da_prospecao__c</fullName>
        <label>Prospecção/Proposta aprovada</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Subtipo__c</fullName>
        <label>Subtipo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Âncora</fullName>
                </value>
                <value>
                    <fullName>Depósito</fullName>
                </value>
                <value>
                    <fullName>Megaloja</fullName>
                </value>
                <value>
                    <fullName>Quiosque</fullName>
                </value>
                <value>
                    <fullName>Satélite</fullName>
                </value>
                <value>
                    <fullName>Mega Banner</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Totem Digital</fullName>
                </value>
                <value>
                    <fullName>Adesivos de Mesa</fullName>
                </value>
                <value>
                    <fullName>Portas de Acesso</fullName>
                </value>
                <value>
                    <fullName>Totem Interno</fullName>
                </value>
                <value>
                    <fullName>Feiras e Eventos</fullName>
                </value>
                <value>
                    <fullName>Colunas Mall</fullName>
                </value>
                <value>
                    <fullName>Colunas Praça de Alimentação</fullName>
                </value>
                <value>
                    <fullName>Painel Backlight</fullName>
                </value>
                <value>
                    <fullName>Porta de Banheiro</fullName>
                </value>
                <value>
                    <fullName>Testeira</fullName>
                </value>
                <value>
                    <fullName>Espelho de Banheiro</fullName>
                </value>
                <value>
                    <fullName>Painel Fachada</fullName>
                </value>
                <value>
                    <fullName>Painel</fullName>
                </value>
                <value>
                    <fullName>Adoção de Espaço</fullName>
                </value>
                <value>
                    <fullName>Cancela Estacionamento</fullName>
                </value>
                <value>
                    <fullName>Painel Frontlight</fullName>
                </value>
                <value>
                    <fullName>Adesivo Piso</fullName>
                </value>
                <value>
                    <fullName>Escada Rolante</fullName>
                </value>
                <value>
                    <fullName>Display Mall</fullName>
                </value>
                <value>
                    <fullName>Panfletagem</fullName>
                </value>
                <value>
                    <fullName>Portas de Elevador</fullName>
                </value>
                <value>
                    <fullName>Display Mesa</fullName>
                </value>
                <value>
                    <fullName>Stand Temporário</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_URL_da_imagem1__c</fullName>
        <label>URL da Imagem 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TW1_URL_da_imagem2__c</fullName>
        <label>URL da Imagem 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_PEC__c</fullName>
        <label>Valor PEC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_TR__c</fullName>
        <label>Valor TR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_de_tabela__c</fullName>
        <label>Valor de tabela</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_area_m2__c</fullName>
        <label>Área (m²)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Propriedade</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Shopping__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Loja</fullName>
        <columns>NAME</columns>
        <columns>TW1_Shopping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TW1_Propriedade__c.TW1_Propriedade_Loja</value>
        </filters>
        <label>Propriedade de Loja</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>TW1_Propriedade_de_FeirasEventos_ListView</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>TW1_Status__c</columns>
        <columns>TW1_Subtipo__c</columns>
        <columns>TW1_area_m2__c</columns>
        <columns>TW1_Altura__c</columns>
        <columns>TW1_Largura__c</columns>
        <columns>TW1_Localizacao__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TW1_Propriedade__c.TW1_Propriedade_feiras_e_eventos</value>
        </filters>
        <label>Propriedade de Feiras e Eventos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TW1_Propriedade_de_Mall_ListView</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>TW1_Status__c</columns>
        <columns>TW1_Subtipo__c</columns>
        <columns>TW1_area_m2__c</columns>
        <columns>TW1_Altura__c</columns>
        <columns>TW1_Largura__c</columns>
        <columns>TW1_Localizacao__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TW1_Propriedade__c.TW1_Propriedade_Mall</value>
        </filters>
        <label>Propriedade de Mall</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TW1_Propriedade_de_Midia_ListView</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>TW1_Status__c</columns>
        <columns>TW1_Subtipo__c</columns>
        <columns>TW1_area_m2__c</columns>
        <columns>TW1_Altura__c</columns>
        <columns>TW1_Largura__c</columns>
        <columns>TW1_Localizacao__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TW1_Propriedade__c.TW1_Propriedade_Midia</value>
        </filters>
        <filters>
            <field>TW1_Shopping__c</field>
            <operation>equals</operation>
            <value>Shopping Leblon</value>
        </filters>
        <label>Propriedade de Mídia</label>
    </listViews>
    <listViews>
        <fullName>Todas_as_propriedades</fullName>
        <columns>NAME</columns>
        <columns>TW1_Shopping__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todas as propriedades</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <label>Nº da Propriedade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Propriedades</pluralLabel>
    <recordTypes>
        <fullName>TW1_Propriedade_Loja</fullName>
        <active>true</active>
        <description>Utilizar este tipo de registro para cadastrar propriedades do tipo loja.</description>
        <label>Propriedade de loja</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Propriedade_Mall</fullName>
        <active>true</active>
        <description>Utilizar este tipo de registro para cadastrar propriedades do tipo mall.</description>
        <label>Propriedade de mall</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Propriedade_Midia</fullName>
        <active>true</active>
        <description>Utilizar este tipo de registro para cadastrar propriedades do tipo mídia.</description>
        <label>Propriedade de mídia</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Propriedade_feiras_e_eventos</fullName>
        <active>true</active>
        <description>Utilizar este tipo de registro para cadastrar propriedades do tipo feiras e eventos.</description>
        <label>Propriedade feiras e eventos</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ImpedeEdicaoNumPropriedade</fullName>
        <active>true</active>
        <description>Impede a edição do nº da propriedade pelo perfil EV</description>
        <errorConditionFormula>AND($User.ProfileId = &quot;00e0R000000IHSK&quot;,PRIORVALUE(Name)&lt;&gt;Name)</errorConditionFormula>
        <errorMessage>Você Não tem permissão para alterar o nº da propriedade</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_PropriedadeImpedeEdicaoName</fullName>
        <active>true</active>
        <description>Impede a edição do nº da propriedade pelo perfil EV</description>
        <errorConditionFormula>AND($User.ProfileId &lt;&gt; &quot;00e1I000000xiXe&quot;,PRIORVALUE(Name)&lt;&gt;Name)</errorConditionFormula>
        <errorMessage>Você Não tem permissão para alterar o nº da propriedade</errorMessage>
    </validationRules>
</CustomObject>